--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -7,16 +7,16 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="">Home<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{{ url_for('view_profiles') }}">Home<span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" href="">About</a>
+      </li> -->
+      <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('add_profile') }}">Add Profile</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" href="">Profile</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="">Profiles</a>
+        <a class="nav-link" href="{{ url_for('view_profiles') }}">Profiles</a>
     </li>
     </ul>
   </div>
