--- a/app/templates/profiles.html
+++ b/app/templates/profiles.html
@@ -1,23 +1,54 @@
 {% extends 'base.html' %}
 {% block main %}
 
-<h1 class="mb-5">Profiles</h1>
+<h1 class="mb-4">Profiles</h1>
 
-{% for profile in range(3) %}
-    <div class="card mb-3" style="width: auto;">
-        <div class="row no-gutters">
-          <div class="col-md-4">
-            <img src="{{ url_for('static', filename='ppictures/default-male.png') }}" class="card-img" alt="profile-picture">
+{% for profile in profiles %}
+    <!-- <a href="{{ url_for('view_profile', userid=profile.pid) }}"> -->
+    <div class="card mb-3 shadow" style="width: auto;">
+
+      <div class="card-top rounded border-primary"></div>
+
+        <div class="row no-gutters  pt-0 pl-3 pr-3 pb-3">
+
+          <div class="d-flex col-md-1 align-items-center">
+            <img src="{{ url_for('static', filename='ppictures/' + profile.profile_picture) }}" class="card-img" alt="profile-picture">
           </div>
-          <div class="col-md-8">
+
+          <div class="d-flex col-md-6 align-items-center">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <h5 class="card-title mb-1">{{ profile.firstname + " " + profile.lastname }}</h5>
+                <div class="text-muted m-0 p-0 ">
+
+                  <div class="d-flex align-items-center mb-2">
+                    {% if profile.gender == "M" %}
+                      <i class="fas fa-mars"></i>
+                    {% else %}
+                      <i class="fas fa-venus"></i>
+                    {% endif %}
+                    <p class="card-text mb-0 ml-2">{{ "Male" if profile.gender == "M" else "Female" }}</p>
+                  </div>
+
+                  <div class="d-flex align-items-center">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <p class="card-text ml-2">{{ profile.location }}</p>
+                  </div>
+
+                </div>
+            </div>
+          </div>
+
+          <div class="d-flex col-md-5 align-items-center">
+            <div class="d-flex card-body justify-content-center">
+              {% with plink = url_for('view_profile', userid=profile.pid) %}
+              <button type="button" class="btn btn-success w-50" onclick="location.href='{{ plink }}';">View Profile</button>
+              {% endwith %}
             </div>
           </div>
         </div>
       </div>
+    <!-- </a> -->
+
 {% endfor %}
 
 {% endblock%}
