--- a/app/templates/user-profile.html
+++ b/app/templates/user-profile.html
@@ -1,34 +1,50 @@
 {% extends 'base.html' %}
 {% block main %}
 
-<div 
-class="card p-5" 
-style="width: auto; margin-left:100px; margin-right:100px; margin-top:25px;">
-    <div class="row no-gutters">
+<div class="card shadow">
+  
+  <div class="card-top rounded border-primary"></div>
+
+    <div class="row no-gutters p-5" style="width: auto; margin-left:100px; margin-right:100px;">
+
       <div class="col-md-3">
-        <img src="{{ url_for('static', filename='ppictures/default-male.png') }}" class="card-img" alt="profile-picture">
+        <img src="{{ url_for('static', filename='ppictures/' + profile.profile_picture) }}" class="card-img" alt="profile-picture">
       </div>
+
       <div class="col-md-9">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h3 class="card-title text-dark font-weight-bold ">{{ profile.firstname + " " + profile.lastname }}</h3>
           <div class="text-secondary">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+
+            <div class="d-flex align-items-center mb-2">
+              <i class="fas fa-map-marker-alt"></i>
+              <p class="card-text ml-3">{{ profile.email }}</p>
+            </div>
+            
+            <div class="d-flex align-items-center mb-2">
+              <i class="far fa-envelope card-text"></i>
+              <p class="card-text ml-3">{{ profile.location }}</p>
+            </div>
+
+            <div class="d-flex align-items-center">
+              <i class="far fa-calendar"></i>
+              <p class="card-text ml-3">joined on {{ profile.date_joined.strftime('%B %d, %Y') }}</p> 
+            </div>
           </div>
           
         </div>
       </div>
-    </div>
 
-    <div class="mt-5">
+      <div class="pt-5 w-100">
         <h3 class="text-muted">About Me</h3>
-        <p>Some text</p>
+        <p>{{ profile.bio }}</p>
         <div class="d-flex justify-content-center">
           <button type="button" class="btn btn-success w-25" id="msgbtn">Send Message</button>
           <div class="ml-4 mr-4"></div>
           <button type="button" class="btn btn-primary w-25" id="followbtn">Follow</button>
         </div>
-        
+      </div>
+
     </div>
   </div>
 
